--- a/front-end/tags-textuais.html
+++ b/front-end/tags-textuais.html
@@ -6,9 +6,32 @@
     <title>Exemplos textuais</title>
 </head>
 <body>
-    <h1>Impacta - Web</h1>
-    <h2>Desenvolvimento Front-End</h2>
+<h1>Impacta - Web</h1>
 
+<hr>
+
+<h2>Desenvolvimento Front-End</h2>
+<p> <u>Curso</u> que aborda as <i>linguagens</i>  usadas na <b>criação</b> de sites.</p>
+
+<p>Texto qualquer <b>sobre</b> etc.</p>
+
+<p>Neste curso, <b><i>aprendemos</i></b>  a trabalhar com a <mark>estruturação</mark>, estilização e comportamentos de sites.</p>
+
+<h3>HTML</h3>
+<p>Estruturação da página.</p>
+
+<h3>CSS</h3>
+<p>Estilização da página.</p>
+
+<h3>JS</h3>
+<p>Interatividade da página.</p>
+
+<hr>
+
+<h2>Desenvolvimento Mobile</h2>
+<p>Área para criação de aplicativos móveis.</p>
+
+<p>É possível criar aplicativos móveis utilizando linguagens web. Existem uma série de tecnologias para isso, como por exemplo o React Native.</p>
 
 </body>
 </html>
