Figure, links, link vertical, exercícios.

--- a/front-end/usando-imagens.html
+++ b/front-end/usando-imagens.html
@@ -39,6 +39,25 @@ alt: indica um texto alternativo/descritivo de acordo com a imagem
     <img src="imagens/black-cat.svg" alt="">
     <img src="imagens/black-cat.png" alt="">
 
+    <!-- Novidade HTML5 -->
+    <figure>
+        <img src="imagens/stonehenge.jpg" alt="Pôr do sol nas ruínas do Stonehenge">
+        <figcaption>
+            Férias no Stonehenge em 2022
+        </figcaption>
+    </figure>
+
+
+    <figure>
+        <img src="imagens/stonehenge.jpg" alt="">
+        <figcaption>
+            Férias no Stonehenge em 2022
+        </figcaption>
+    </figure>
+
+
+
+
 
 
 </body>
