Tags semânticas, início projeto, formulários, CSS

--- a/front-end/tags-textuais.html
+++ b/front-end/tags-textuais.html
@@ -6,7 +6,9 @@
     <title>Exemplos textuais</title>
 </head>
 <body>
-<h1>Impacta - Web</h1>
+
+<h1 style="color:red; text-align: center;">
+Impacta - Web</h1>
 
 <hr>
 
