CSS: interno, regras com seletor do tipo tag
Diversas propriedades. Início CSS do Mini-site

--- a/front-end/tags-textuais.html
+++ b/front-end/tags-textuais.html
@@ -12,7 +12,9 @@ Impacta - Web</h1>
 
 <hr>
 
-<h2>Desenvolvimento Front-End</h2>
+<h2 style="border-left: solid red 10px">
+Desenvolvimento Front-End</h2>
+
 <p> <u>Curso</u> que aborda as <i>linguagens</i>  usadas na <b>criação</b> de sites.</p>
 
 <p>Texto qualquer <b>sobre</b> etc.</p>
@@ -30,7 +32,7 @@ Impacta - Web</h1>
 
 <hr>
 
-<h2>Desenvolvimento Mobile</h2>
+<h2 style="border-left: solid red 10px">Desenvolvimento Mobile</h2>
 <p>Área para criação de aplicativos móveis.</p>
 
 <p>É possível criar aplicativos móveis utilizando linguagens web. Existem uma série de tecnologias para isso, como por exemplo o React Native.</p>
