--- a/projeto/index.html
+++ b/projeto/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABC Tecnologia</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ABC Tecnologia</title>
+<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header>
