Projeto: imagem decorativa

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -19,6 +19,10 @@
         </nav>
     </header>
 
+    <!-- Área decorativa,
+    formatada com CSS -->
+    <div id="imagem-decorativa"></div>
+
     <main>
         <article>
             <h2>Conheça-nos um pouco</h2>
