--- a/projeto/index.html
+++ b/projeto/index.html
@@ -5,12 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ABC Tecnologia</title>
 <link rel="stylesheet" href="css/estilos.css">
+<link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
     <header>
         <h1>ABC Tecnologia</h1>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="">A Empresa</a></li>
                 <li><a href="">Produtos</a></li>
                 <li><a href="">Localização</a></li>
