--- a/front-end/javascript/07-dom-e-eventos.html
+++ b/front-end/javascript/07-dom-e-eventos.html
@@ -12,6 +12,11 @@ img { max-width: 100%; }
     border: solid 1px;
     padding: 2px;
 }
+
+.noturno {
+    background-color: black;
+    color: white;
+}
 </style>
 </head>
 <body>
@@ -33,7 +38,8 @@ img { max-width: 100%; }
     <p>Eventos são interações/fenômenos que ocorrem na página. Ao monitorar e manipular eventos, o JS pode reagir ao que acontece.</p>
     <hr>
 
-    <h3>Exemplo 01: detectando eventos</h3>
+    <h3 id="exemplo01">Exemplo 01: detectando eventos</h3>
+    <p id="mensagem"></p>
 
     <hr>
 
