Projeto: CSS final do menu e menu.js

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -16,6 +16,10 @@
                 <li><a href="">Produtos</a></li>
                 <li><a href="">Localização</a></li>
                 <li><a href="rh/registro.html">Trabalhe Conosco</a></li>
+
+                <li class="icone">
+                    <a href="">Menu &equiv;</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -44,5 +48,7 @@
             educacionais &copy; 2023
         </p>
     </footer>
+
+    <script src="js/menu.js"></script>
 </body>
 </html>
