--- a/projeto/index.html
+++ b/projeto/index.html
@@ -12,9 +12,9 @@
         <h1>ABC Tecnologia</h1>
         <nav>
             <ul class="menu">
-                <li><a href="">A Empresa</a></li>
-                <li><a href="">Produtos</a></li>
-                <li><a href="">Localização</a></li>
+                <li><a href="index.html">A Empresa</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="localizacao.html">Localização</a></li>
                 <li><a href="rh/registro.html">Trabalhe Conosco</a></li>
 
                 <li class="icone">
